# CNC_UR5e

./: .gitignore  README.md
src/: tree.txt
src/moveit2_config/: .setup_assistant  package.xml
src/trialpkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/trialpkg/config/: controller.yaml  controllertool.yaml
src/trialpkg/gcodefiles/: big_movements_50cm_xy.gcode  minimalgcode.gcode  minimalspiral.gcode  newgcode.gcode
src/trialpkg/graphs/componentgraphs/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/graphs/latestrun1/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/graphs/pidgraphs/run i0.01 d0.1/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/graphs/pidgraphs/run i0.1 d0.01/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/graphs/realop/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/graphs/test/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/graphs/wopid/: ft_sensor.csv  joint_velocities.csv
src/trialpkg/launch/: robo.launch.py  tool.launch.py
src/trialpkg/meshes/visual/: millcutter.stl
src/trialpkg/trialpkg/: cartesian_trajectory_node.py  cartesianpath.py  cartesiantrial.py  cartsimple.py  coordinate_transform.py  gcode_utils.py  gcodenew.py  gcodeparser.py  gcodeparsernew.py  gcodepath.py  gcodetry.py  homepos.py  jssinew.py  minimaltraj.py  minimumvis.py  newcoord.py  ur5e_inverse_kinematics_poe.py  urfk.py  urik.py
src/trialpkg/urdf/: ur5e_corrected.urdf.xacro  ur5e_corrected_with_tcp.urdf.xacro  ur5e_corrected_with_tool0.urdf.xacro  ur5e_robot.urdf.xacro
src/trialpkg/worlds/: empty.world
(+39 files in other folders)
